# scraper_api

./: README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/controllers/: downloads.py  users.py
app/models/: __init__.py  user.py
app/schemas/: download.py  user.py
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py
backend/app/controllers/: reports.py
backend/app/models/: __init__.py  planning_permission.py
backend/app/schemas/: __init__.py  report.py
backend/app/services/: __init__.py  planning_permissions_service.py  user_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Downloads.tsx  Reports.tsx  Users.tsx
frontend/src/services/: api.ts
tests/: test_user_service.py
